kubernetes/platform/docs-internal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-internal
  namespace: docs-internal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs-internal
  template:
    metadata:
      labels:
        app: docs-internal
    spec:
      containers:
        - name: docs-internal
          image: harbor.aetheriscloud.fr/aetheriscloud/docs-internal:1.0.5
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            runAsUser: 101
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: docs-internal
  namespace: docs-internal
spec:
  selector:
    app: docs-internal
  ports:
    - port: 80
      targetPort: 8080
